--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
-    "build" : "npm install && cd frontend && npm install && npm run build"
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
